--- a/src/styles/tasks.css
+++ b/src/styles/tasks.css
@@ -23,7 +23,8 @@
 .task-container {
   display: flex;
   align-items: center;
-  width: 100%;
+  justify-content: space-between;
+  /* width: 100%; */
   border-bottom: 1px solid rgba(51, 51, 51, 0.2);
   max-width: 100%;
 }
@@ -34,7 +35,8 @@ input[type="checkbox"] {
 }
 
 .task-container .task-contents {
-  flex: 1;
+  /* flex: 1; */
+  /* display: flex; */
   font-size: 2rem;
   font-weight: 600;
   color: var(--primary-dark);
@@ -42,7 +44,6 @@ input[type="checkbox"] {
   padding: 1rem 0;
   display: flex;
   align-items: center;
-  max-width: 100%;
 }
 
 .custom-checkbox {
@@ -93,7 +94,7 @@ input[type="checkbox"]:checked + div > span {
   justify-content: flex-end;
   align-items: center;
   gap: 1.5rem;
-  color: var(--red-500);
+  margin-left: 1rem;
 }
 
 .delete-label {
@@ -114,8 +115,8 @@ input[type="checkbox"]:checked + div > span {
 
 .editable-title {
   text-align: left;
-  overflow-wrap: break-word;
   max-width: 100%;
+  word-break: break-all;
 }
 
 .editable-title:focus {
